--- a/src/SafeWalk.Infrastructure/SafeWalk.Infrastructure.csproj
+++ b/src/SafeWalk.Infrastructure/SafeWalk.Infrastructure.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\SafeWalk.Domain\SafeWalk.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
