--- a/src/SafeWalk.Infrastructure/SafeWalk.Infrastructure.csproj
+++ b/src/SafeWalk.Infrastructure/SafeWalk.Infrastructure.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\SafeWalk.Application\SafeWalk.Application.csproj" />
     <ProjectReference Include="..\SafeWalk.Domain\SafeWalk.Domain.csproj" />
@@ -7,12 +13,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <!-- removed Microsoft.Extensions.DependencyInjection.Abstractions -->
   </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
 </Project>
+
