--- a/src/SafeWalk.Api/appsettings.json
+++ b/src/SafeWalk.Api/appsettings.json
@@ -1,4 +1,13 @@
 {
+
+  
+    "ConnectionStrings": {
+      "SafeWalkDb": "Server=DESKTOP-136L4AQ\\SQLEXPRESS;Database=SafeWalkDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+  
+
+  
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
